# luup-agent

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_PROMPT.md  PROJECT_STRUCTURE.md  README.md  TESTING.md  build.bat  build.sh  luup-agent.plan.md  models  test_cli.bat  test_cli.sh
bindings/python/: PHASE4_COMPLETE.md  PYTHON_BINDINGS_READY.md  README.md  pyproject.toml  requirements.txt  setup.py  test_basic_usage.py  verify_bindings.py
bindings/python/examples/: async_streaming.py  basic_chat.py  builtin_tools.py  remote_api.py  tool_calling.py
bindings/python/luup_agent/: __init__.py  _native.py  agent.py  exceptions.py  model.py
bindings/python/tests/: conftest.py  test_agent.py  test_model.py  test_tools.py
docs/: README.md  api_reference.md  quickstart.md  tool_calling_guide.md
docs/development/: IMPLEMENTATION_PLAN.md  QUICK_TESTING.md
docs/phases/: PHASE3_COMPLETE.md  PHASE5_COMPLETE.md
examples/: CMakeLists.txt  basic_chat.cpp  builtin_tools_demo.cpp  interactive_cli.cpp  remote_api_demo.cpp  tool_calling.cpp
include/: luup_agent.h
src/: version.cpp
src/backends/: local_llama.cpp  remote_api.cpp
src/builtin_tools/: notes.cpp  summarization.cpp  todo_list.cpp
src/core/: agent.cpp  context_manager.cpp  error_handling.cpp  internal.h  model.cpp  tool_calling.cpp
tests/: CMakeLists.txt
tests/unit/: test_agent.cpp  test_model.cpp  test_tools.cpp
